      in an LDAP directory (needs libauthen-sasl-perl and libnet-ldap-perl
      and only works with GSS-API binds).
    - New acl check command that returns whether the named ACL exists.
    - New comments field for objects and wallet commands to set and
      retrieve it.
  * Switch to xz compression for the upstream and Debian tarballs.
  * Move single-debian-patch to local-options and patch-header to
    local-patch-header so that they only apply to the packages I build and
    NMUs get regular version-numbered patches.
  * Update standards version to 3.9.4.
    - Indicate the Debian packaging branch in the Vcs-Git header.

 -- Russ Allbery <rra@debian.org>  Wed, 27 Mar 2013 15:23:54 -0700

wallet (0.12-1) unstable; urgency=low

  * New upstream release.
    - New wallet-rekey client program to rekey a keytab.
    - New ACL type krb5-regex for the server.
    - New objects unused wallet-report report.
    - New acls duplicate wallet-report report.
    - Add a help command to wallet-report.
  * Don't install wallet-summary in /usr/sbin in the wallet-server package
    and instead install it in /usr/share/doc/wallet-server/examples.  This
    program is Stanford-specific and would require extensive changes for
    other sites.
  * Install the other contrib scripts except convert-srvtab-db to the
    examples directory for wallet-server.
  * Switch to 3.0 (quilt) source format.  Force a single Debian patch and
    include a custom patch header explaining that it is a rollup of any
    fixes cherry-picked from upstream and breaking those patches out
    separately would be work for no gain.
  * Update standards version to 3.9.1 (no changes required).

 -- Russ Allbery <rra@debian.org>  Wed, 25 Aug 2010 18:49:48 -0700

wallet (0.11-1) unstable; urgency=low

  * New upstream release.
    - Verify that deleted ACLs are not referenced.
    - Add Wallet::Config verify_acl_name function to check ACL names.