@@ -2,7 +2,7 @@ Source: wallet
 Section: net
 Priority: extra
 Maintainer: Russ Allbery <rra@debian.org>
-Build-Depends: debhelper (>= 7.0.50~), libdatetime-format-sqlite-perl,
+Build-Depends: debhelper (>= 9), libdatetime-format-sqlite-perl,
  libdbd-sqlite3-perl, libdbi-perl, libdbx-class-perl, libkrb5-dev,
  libremctl-dev, libsql-translator-perl, libtest-pod-perl, perl
 Standards-Version: 3.9.4
