@@ -11,6 +11,9 @@ wallet (1.0-1) UNRELEASED; urgency=low
     - New comments field for objects and wallet commands to set and
       retrieve it.
   * Switch to xz compression for the upstream and Debian tarballs.
+  * Update debhelper compatibility level to V9.
+    - Enable all hardening build flags.
+    - Enable parallel builds.
   * Move single-debian-patch to local-options and patch-header to
     local-patch-header so that they only apply to the packages I build and
     NMUs get regular version-numbered patches.
